[project]
name = "sdxlcustomaspectratio"
description = "A quick and easy ComfyUI custom node for setting SDXL-friendly aspect ratios."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/throttlekitty/SDXLCustomAspectRatio"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "throttlekitty"
DisplayName = "SDXLCustomAspectRatio"
Icon = ""
